tests/support/validation/invalid/overlapping_cal_exception/crew.crw
CSC;atn20016;Saturday  ; 5;02;BUS22020  ;BenTT   ;North Cambridge Saturday 19/0 REMAKE                                            
PCE;125-2501 ;   9504898;6      ;   4220699;    1;ncamb ;0419a;ncamb ;0429a;bally ;1000a;bally ;1000a;016;;
CSC;abc20016;Saturday  ; 5;02;BUS22020  ;Cabot   ;Cabot Saturday Remake Blocks                                                    
PCE;123-2002 ;   9524868;6      ;   4236059;    1;cabot ;0241a;cabot ;0251a;dudly ;0811a;dudly ;0818a;016;;
CSC;abt20a36;Saturday  ; 5;02;BUS22020  ;Somvl   ;Somerville Saturday - Harvard Tunnel Detour + 71/73 (Remake Blocks)             
PCE;125-2501 ;   9640185;6      ;   4315289;    1;somvl ;0413a;somvl ;0423a;bally ;1011a;bally ;1016a;a36;;
